--- a/ALS_backend/src/main/webapp/WEB-INF/web.xml
+++ b/ALS_backend/src/main/webapp/WEB-INF/web.xml
@@ -17,21 +17,12 @@
 		<res-type>javax.sql.DataSource</res-type>
 	</resource-ref>
 	<servlet>
-		<servlet-name>ODataServlet</servlet-name>
-		<servlet-class>org.apache.cxf.jaxrs.servlet.CXFNonSpringJaxrsServlet</servlet-class>
-		<init-param>
-			<param-name>javax.ws.rs.Application</param-name>
-			<param-value>org.apache.olingo.odata2.core.rest.app.ODataApplication</param-value>
-		</init-param>
-		<init-param>
-			<param-name>org.apache.olingo.odata2.service.factory</param-name>
-			<param-value>com.sap.hana.cloud.odata.service.PersonsListServiceFactory</param-value>
-		</init-param>
-		<load-on-startup>2</load-on-startup>
+		<servlet-name>QuestionnaireServlet</servlet-name>
+		<servlet-class>als.api.servlets.QuestionnaireServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>ODataServlet</servlet-name>
-		<url-pattern>/als.svc/*</url-pattern>
+		<servlet-name>QuestionnaireServlet</servlet-name>
+		<url-pattern>/questionnaire/*</url-pattern>
 	</servlet-mapping>
 
 </web-app>
