--- a/ALS_backend/src/main/resources/db.properties
+++ b/ALS_backend/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-jdbc.url = jdbc:mysql://<host>:<port>/db_als
-jdbc.username = 
-jdbc.password = 
+jdbc.url = jdbc:mysql://localhost:3306/db_als
+jdbc.username = root
+jdbc.password = abcd1234
 jdbc.driverClassName=com.mysql.jdbc.Driver
